--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
     "require": {
         "php": "~5.5.0|~5.6.0|~7.0.0",
         "magento/framework": "100.0.*",
-        "magento/checkout": "100.0.*",
-        "magento/quote": "100.0.*"
+        "magento/module-checkout": "100.0.*",
+        "magento/module-quote": "100.0.*"
     },
     "autoload": {
         "files": [
